test: add unit test